# rs-aht10

./: Cargo.toml  readme.md
example/: pico_usb_serial.rs  rp_pico_aht10.rs  serial_buffer.rs  simple_buffer.rs
src/: data.rs  lib.rs
